@@ -59,10 +59,22 @@ Arg RE::no_arg((void*)NULL);
 
 // This is for ABI compatibility with old versions of pcre (pre-7.6),
 // which defined a global no_arg variable instead of putting it in the
-// RE class.  This works on GCC >= 3, at least.  We could probably have
-// a more inclusive test if we ever needed it.
+// RE class.  This works on GCC >= 3, at least.  We could probably
+// have a more inclusive test if we ever needed it.  (Note that not
+// only the __attribute__ syntax, but also __USER_LABEL_PREFIX__, are
+// gnu-specific.)
 #if defined(__GNUC__) && __GNUC__ >= 3
-extern Arg no_arg __attribute__((alias("_ZN7pcrecpp2RE6no_argE")));
+#if defined(__ELF__)
+extern Arg no_arg
+  __attribute__((alias(__USER_LABEL_PREFIX__ "_ZN7pcrecpp2RE6no_argE")));
+#else
+// While we know elf supports strong aliases, not all formats do (Mach
+// doesn't, for instance).  So make aliases weak by default.  This is
+// a smidge less safe in theory (conceivably, someone could override
+// this symbol in their own binary), but perfectly ok in practice.
+extern Arg no_arg
+  __attribute__((weak, alias(__USER_LABEL_PREFIX__ "_ZN7pcrecpp2RE6no_argE")));
+#endif
 #endif
 
 // If a regular expression has no error, its error_ field points here
